
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int buf ;
struct TYPE_2__ {char* string; } ;


 int Com_sprintf (char*,int,char*,int ) ;
 int MAX_GENTITIES ;
 TYPE_1__ bot_developer ;
 int strcpy (char*,char*) ;
 scalar_t__ strlen (char*) ;
 int trap_BotLibDefine (char*) ;
 int trap_BotLibSetup () ;
 int trap_BotLibVarSet (char*,char*) ;
 int trap_Cvar_VariableStringBuffer (char*,char*,int) ;

int BotInitLibrary(void) {
 char buf[144];


 trap_Cvar_VariableStringBuffer("sv_maxclients", buf, sizeof(buf));
 if (!strlen(buf)) strcpy(buf, "8");
 trap_BotLibVarSet("maxclients", buf);
 Com_sprintf(buf, sizeof(buf), "%d", MAX_GENTITIES);
 trap_BotLibVarSet("maxentities", buf);

 trap_Cvar_VariableStringBuffer("sv_mapChecksum", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("sv_mapChecksum", buf);

 trap_Cvar_VariableStringBuffer("max_aaslinks", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("max_aaslinks", buf);

 trap_Cvar_VariableStringBuffer("max_levelitems", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("max_levelitems", buf);

 trap_Cvar_VariableStringBuffer("g_gametype", buf, sizeof(buf));
 if (!strlen(buf)) strcpy(buf, "0");
 trap_BotLibVarSet("g_gametype", buf);

 trap_BotLibVarSet("bot_developer", bot_developer.string);
 trap_BotLibVarSet("log", buf);

 trap_Cvar_VariableStringBuffer("bot_nochat", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("nochat", "0");

 trap_Cvar_VariableStringBuffer("bot_visualizejumppads", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("bot_visualizejumppads", buf);

 trap_Cvar_VariableStringBuffer("bot_forceclustering", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("forceclustering", buf);

 trap_Cvar_VariableStringBuffer("bot_forcereachability", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("forcereachability", buf);

 trap_Cvar_VariableStringBuffer("bot_forcewrite", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("forcewrite", buf);

 trap_Cvar_VariableStringBuffer("bot_aasoptimize", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("aasoptimize", buf);

 trap_Cvar_VariableStringBuffer("bot_saveroutingcache", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("saveroutingcache", buf);

 trap_Cvar_VariableStringBuffer("bot_reloadcharacters", buf, sizeof(buf));
 if (!strlen(buf)) strcpy(buf, "0");
 trap_BotLibVarSet("bot_reloadcharacters", buf);

 trap_Cvar_VariableStringBuffer("fs_basepath", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("basedir", buf);

 trap_Cvar_VariableStringBuffer("fs_game", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("gamedir", buf);

 trap_Cvar_VariableStringBuffer("fs_cdpath", buf, sizeof(buf));
 if (strlen(buf)) trap_BotLibVarSet("cddir", buf);





 return trap_BotLibSetup();
}
